# unsent-rust

./: Cargo.toml  LICENSE  README.md
scripts/: generate_types.sh
src/: activity.rs  analytics.rs  api_keys.rs  campaigns.rs  client.rs  contact_books.rs  contacts.rs  domains.rs  emails.rs  events.rs  lib.rs  metrics.rs  models.rs  provider_connections.rs  settings.rs  stats.rs  suppressions.rs  system.rs  teams.rs  templates.rs  types.rs  webhooks.rs
