[package]
name = "unsent"
version = "1.1.0"
edition = "2021"
authors = ["unsent"]
license = "MIT"
description = "Rust SDK for the Unsent API - Send transactional emails with ease"
homepage = "https://unsent.dev"
repository = "https://github.com/unsent-dev/unsent-rust"
documentation = "https://docs.unsent.dev"
keywords = ["unsent", "email", "transactional-email", "api", "sdk"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
serde_with = "3.0"
serde_qs = "0.12"
uuid = { version = "1", features = ["serde"] }
